Fix: test를 위해 main에 push하면 action동작하게 변경

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -4,6 +4,9 @@ name: GitHub Actions Demo
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 # 언제 실행될지
 on:
+  push:
+    branches:
+      - main
   # 하루에 한번 cron 실행
   schedule:
     - cron: "0 0 * * *"
